accelerated-domains: add xa-expoon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86168,6 +86168,7 @@ server=/x8ds.com/114.114.114.114
 server=/x8sb.com/114.114.114.114
 server=/x9393.com/114.114.114.114
 server=/xa-bank.com/114.114.114.114
+server=/xa-expoon.com/114.114.114.114
 server=/xa-online.com/114.114.114.114
 server=/xa-psj.com/114.114.114.114
 server=/xa.com/114.114.114.114
