--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37353,6 +37353,7 @@ server=/gyuancdn.com/114.114.114.114
 server=/gyurt.com/114.114.114.114
 server=/gywygl.com/114.114.114.114
 server=/gyxdkjdl.com/114.114.114.114
+server=/gyxinfang.com/114.114.114.114
 server=/gyxuan.com/114.114.114.114
 server=/gyxx.com/114.114.114.114
 server=/gyxx365.com/114.114.114.114
