--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42275,6 +42275,7 @@ server=/hugetall.com/114.114.114.114
 server=/hughg.com/114.114.114.114
 server=/huhaha.net/114.114.114.114
 server=/huhanba.com/114.114.114.114
+server=/huhaoyang.com/114.114.114.114
 server=/huhexian.com/114.114.114.114
 server=/huhoo.com/114.114.114.114
 server=/huhoo.net/114.114.114.114
