accelerated-domains: add ruffhousetraining.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69367,6 +69367,7 @@ server=/rue123.com/114.114.114.114
 server=/ruesu.com/114.114.114.114
 server=/rufei.ren/114.114.114.114
 server=/rufengso.net/114.114.114.114
+server=/ruffhousetraining.com/114.114.114.114
 server=/ruffood.com/114.114.114.114
 server=/rufida.com/114.114.114.114
 server=/rugao35.com/114.114.114.114
