accelerated-domains: add xjwshb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88452,6 +88452,7 @@ server=/xju88.com/114.114.114.114
 server=/xjweek.com/114.114.114.114
 server=/xjwell.com/114.114.114.114
 server=/xjwljb.com/114.114.114.114
+server=/xjwshb.com/114.114.114.114
 server=/xjwyglw.com/114.114.114.114
 server=/xjxa.com/114.114.114.114
 server=/xjxbdh.xyz/114.114.114.114
