accelerated-domains: add 0537love.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -424,6 +424,7 @@ server=/05356.com/114.114.114.114
 server=/05367.net/114.114.114.114
 server=/0536qz.com/114.114.114.114
 server=/0536weixin.com/114.114.114.114
+server=/0537love.com/114.114.114.114
 server=/0537ys.com/114.114.114.114
 server=/0537yz.com/114.114.114.114
 server=/0539fc.com/114.114.114.114
