--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71137,6 +71137,7 @@ server=/sfygroup.com/114.114.114.114
 server=/sfys365.com/114.114.114.114
 server=/sfystatic.com/114.114.114.114
 server=/sfyyqc.com/114.114.114.114
+server=/sfyzf.com/114.114.114.114
 server=/sfzj123.com/114.114.114.114
 server=/sg-che.com/114.114.114.114
 server=/sg-micro.com/114.114.114.114
