accelerated-domains: add zgqbxh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95448,6 +95448,7 @@ server=/zgps168.com/114.114.114.114
 server=/zgpts.com/114.114.114.114
 server=/zgpy168.com/114.114.114.114
 server=/zgq.ink/114.114.114.114
+server=/zgqbxh.com/114.114.114.114
 server=/zgqcdt.com/114.114.114.114
 server=/zgqczj.com/114.114.114.114
 server=/zgqingfusuan.com/114.114.114.114
