--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69900,6 +69900,7 @@ server=/sanjiasoft.com/114.114.114.114
 server=/sanjieke.com/114.114.114.114
 server=/sanjiexc.com/114.114.114.114
 server=/sanjinjiake.com/114.114.114.114
+server=/sanjinzuan.com/114.114.114.114
 server=/sanjiusk.net/114.114.114.114
 server=/sanjiuxs.com/114.114.114.114
 server=/sanjun.com/114.114.114.114
