--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58004,6 +58004,7 @@ server=/micblo.com/114.114.114.114
 server=/micecn.com/114.114.114.114
 server=/michael-j.net/114.114.114.114
 server=/michaelapp.com/114.114.114.114
+server=/michelleventon.com/114.114.114.114
 server=/michong.com/114.114.114.114
 server=/michplay.com/114.114.114.114
 server=/miclle.com/114.114.114.114
