accelerated-domains: add 158wf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1545,6 +1545,7 @@ server=/1588.tv/114.114.114.114
 server=/158999.org/114.114.114.114
 server=/158c.com/114.114.114.114
 server=/158jixie.com/114.114.114.114
+server=/158wf.com/114.114.114.114
 server=/159.com/114.114.114.114
 server=/15982.com/114.114.114.114
 server=/159shouji.com/114.114.114.114
