--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63996,6 +63996,7 @@ server=/pcoof.com/114.114.114.114
 server=/pcoyx.com/114.114.114.114
 server=/pcpop.com/114.114.114.114
 server=/pcpresent.com/114.114.114.114
+server=/pcr6.com/114.114.114.114
 server=/pcr9170.com/114.114.114.114
 server=/pcsee.org/114.114.114.114
 server=/pcsfc.com/114.114.114.114
