accelerated-domains: add martinlofts.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56931,6 +56931,7 @@ server=/marstv.com/114.114.114.114
 server=/martech365.com/114.114.114.114
 server=/martin8023.com/114.114.114.114
 server=/martincl2.me/114.114.114.114
+server=/martinlofts.com/114.114.114.114
 server=/marto.cc/114.114.114.114
 server=/marvelunlimitedresources.com/114.114.114.114
 server=/maryek.net/114.114.114.114
