accelerated-domains: add bydfbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16439,6 +16439,7 @@ server=/bybzb.com/114.114.114.114
 server=/byc168.com/114.114.114.114
 server=/byd.auto/114.114.114.114
 server=/byd.com/114.114.114.114
+server=/bydfbj.com/114.114.114.114
 server=/bydhaiyang.com/114.114.114.114
 server=/bydit.com/114.114.114.114
 server=/bydoceanauto.com/114.114.114.114
