--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66134,6 +66134,7 @@ server=/qiandaohu.cc/114.114.114.114
 server=/qiandaqian.com/114.114.114.114
 server=/qiandd.com/114.114.114.114
 server=/qiandeups.com/114.114.114.114
+server=/qiandianyf.com/114.114.114.114
 server=/qianduan.com/114.114.114.114
 server=/qianduanheidong.com/114.114.114.114
 server=/qiandw.com/114.114.114.114
