--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66067,6 +66067,7 @@ server=/qhlingwang.com/114.114.114.114
 server=/qhlyou.com/114.114.114.114
 server=/qhm123.com/114.114.114.114
 server=/qhmed.com/114.114.114.114
+server=/qhmgf.com/114.114.114.114
 server=/qhmsg.com/114.114.114.114
 server=/qhnews.com/114.114.114.114
 server=/qhong.net/114.114.114.114
