--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86540,6 +86540,7 @@ server=/xdpipe.com/114.114.114.114
 server=/xdpjump.com/114.114.114.114
 server=/xdplt.com/114.114.114.114
 server=/xdpvp.com/114.114.114.114
+server=/xdqjbj.com/114.114.114.114
 server=/xdrcftv.com/114.114.114.114
 server=/xdressy.com/114.114.114.114
 server=/xdrig.com/114.114.114.114
