--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57655,6 +57655,7 @@ server=/menglan.com/114.114.114.114
 server=/menglechong.com/114.114.114.114
 server=/menglegame.com/114.114.114.114
 server=/mengmax.fun/114.114.114.114
+server=/mengmayw.com/114.114.114.114
 server=/mengmei.org/114.114.114.114
 server=/mengniang.tv/114.114.114.114
 server=/mengniu99.com/114.114.114.114
