accelerated-domains: add bigoledog.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14411,6 +14411,7 @@ server=/bignox.com/114.114.114.114
 server=/bigo.sg/114.114.114.114
 server=/bigo.tv/114.114.114.114
 server=/bigogm.com/114.114.114.114
+server=/bigoledog.com/114.114.114.114
 server=/bigolive.tv/114.114.114.114
 server=/bigops.com/114.114.114.114
 server=/bigplayers.com/114.114.114.114
