accelerated-domains: add hnbhcp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40597,6 +40597,7 @@ server=/hnartces857.live/114.114.114.114
 server=/hnaues.com/114.114.114.114
 server=/hnayg.com/114.114.114.114
 server=/hnbaili.net/114.114.114.114
+server=/hnbhcp.com/114.114.114.114
 server=/hnbidding.com/114.114.114.114
 server=/hnbits.com/114.114.114.114
 server=/hnblc.com/114.114.114.114
