--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33338,6 +33338,7 @@ server=/gkfb.com/114.114.114.114
 server=/gkgzj.com/114.114.114.114
 server=/gkhxtc.com/114.114.114.114
 server=/gki88.com/114.114.114.114
+server=/gkjfq.com/114.114.114.114
 server=/gkkxd.com/114.114.114.114
 server=/gklx.net/114.114.114.114
 server=/gkmems.com/114.114.114.114
