accelerated-domains: add wanyoulu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82860,6 +82860,7 @@ server=/wanyijizi.com/114.114.114.114
 server=/wanyiwang.com/114.114.114.114
 server=/wanyol.com/114.114.114.114
 server=/wanyoo.com/114.114.114.114
+server=/wanyoulu.com/114.114.114.114
 server=/wanyouw.com/114.114.114.114
 server=/wanyouxi7.com/114.114.114.114
 server=/wanyr.com/114.114.114.114
