--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45150,6 +45150,7 @@ server=/intelvisioncn.com/114.114.114.114
 server=/inter-credit.net/114.114.114.114
 server=/inter1908.net/114.114.114.114
 server=/interactivebrokers.hk/114.114.114.114
+server=/interarknet.com/114.114.114.114
 server=/interchinawater.com/114.114.114.114
 server=/interface003.com/114.114.114.114
 server=/intergreat.com/114.114.114.114
