accelerated-domains: add arktong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11731,6 +11731,7 @@ server=/arkrdigital.com/114.114.114.114
 server=/arkread.com/114.114.114.114
 server=/arks.red/114.114.114.114
 server=/arksz.com/114.114.114.114
+server=/arktong.com/114.114.114.114
 server=/arliki.com/114.114.114.114
 server=/arlinco.com/114.114.114.114
 server=/arlmy.me/114.114.114.114
