accelerated-domains: add xmbyhksjhzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88639,6 +88639,7 @@ server=/xmbankonline.com/114.114.114.114
 server=/xmbhw.com/114.114.114.114
 server=/xmbike.com/114.114.114.114
 server=/xmbus.com/114.114.114.114
+server=/xmbyhksjhzx.com/114.114.114.114
 server=/xmcbzj.com/114.114.114.114
 server=/xmccb.com/114.114.114.114
 server=/xmcdn.com/114.114.114.114
