--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53350,6 +53350,7 @@ server=/leowu.online/114.114.114.114
 server=/leozwang.com/114.114.114.114
 server=/lepaicm.com/114.114.114.114
 server=/lepalacegt.com/114.114.114.114
+server=/lepanshoping.com/114.114.114.114
 server=/lepiaoyun.com/114.114.114.114
 server=/leptv.com/114.114.114.114
 server=/leqi.us/114.114.114.114
