accelerated-domains: add zanlaa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94868,6 +94868,7 @@ server=/zangx.com/114.114.114.114
 server=/zangyitang123.com/114.114.114.114
 server=/zangyitong.com/114.114.114.114
 server=/zankee1955.com/114.114.114.114
+server=/zanlaa.com/114.114.114.114
 server=/zanmeishige.com/114.114.114.114
 server=/zanmeizhibo.com/114.114.114.114
 server=/zanpic.com/114.114.114.114
