accelerated-domains: add szhtqjfw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76266,6 +76266,7 @@ server=/szhsx.net/114.114.114.114
 server=/szhsztdcgs.com/114.114.114.114
 server=/szhtbs.com/114.114.114.114
 server=/szhtp.com/114.114.114.114
+server=/szhtqjfw.com/114.114.114.114
 server=/szhua-gao.net/114.114.114.114
 server=/szhuace.com/114.114.114.114
 server=/szhubei.com/114.114.114.114
