accelerated-domains: add pcmjggc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64000,6 +64000,7 @@ server=/pcitc.com/114.114.114.114
 server=/pcjsq.com/114.114.114.114
 server=/pcljl.com/114.114.114.114
 server=/pcmgr-global.com/114.114.114.114
+server=/pcmjggc.com/114.114.114.114
 server=/pcmoe.net/114.114.114.114
 server=/pcoic.com/114.114.114.114
 server=/pcoof.com/114.114.114.114
