--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7828,6 +7828,7 @@ server=/8gra3.icu/114.114.114.114
 server=/8gui.com/114.114.114.114
 server=/8gw.com/114.114.114.114
 server=/8gyu.com/114.114.114.114
+server=/8hgame.com/114.114.114.114
 server=/8hsleep.com/114.114.114.114
 server=/8i.ink/114.114.114.114
 server=/8jdns.net/114.114.114.114
