--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93279,6 +93279,7 @@ server=/yrw.com/114.114.114.114
 server=/yrwy.com/114.114.114.114
 server=/yrxitong.com/114.114.114.114
 server=/yrxsw.com/114.114.114.114
+server=/yryp123.com/114.114.114.114
 server=/yryz.com/114.114.114.114
 server=/yryz.net/114.114.114.114
 server=/yrz.name/114.114.114.114
