accelerated-domains: add nightanddaythegame.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61023,6 +61023,7 @@ server=/nietou.com/114.114.114.114
 server=/niexiaotao.com/114.114.114.114
 server=/nieyou.com/114.114.114.114
 server=/nifengz.com/114.114.114.114
+server=/nightanddaythegame.com/114.114.114.114
 server=/nightcity.pub/114.114.114.114
 server=/nightmare.press/114.114.114.114
 server=/nihao.net/114.114.114.114
