accelerated-domains: add hammypuff.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38087,6 +38087,7 @@ server=/hamdl.com/114.114.114.114
 server=/hamedal.com/114.114.114.114
 server=/hamilun.com/114.114.114.114
 server=/hamir.net/114.114.114.114
+server=/hammypuff.com/114.114.114.114
 server=/hamptonboro.com/114.114.114.114
 server=/hamu.site/114.114.114.114
 server=/han-ju.cc/114.114.114.114
