accelerated-domains: add chuanghaiwei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20124,6 +20124,7 @@ server=/chuangduyouyue.com/114.114.114.114
 server=/chuangen.com/114.114.114.114
 server=/chuangfeixin.com/114.114.114.114
 server=/chuanggallery.com/114.114.114.114
+server=/chuanghaiwei.com/114.114.114.114
 server=/chuangji2009.com/114.114.114.114
 server=/chuangjiangx.com/114.114.114.114
 server=/chuangjie.com/114.114.114.114
