accelerated-domains: add youshionline.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92970,6 +92970,7 @@ server=/yousheyoujia.com/114.114.114.114
 server=/youshibeike.com/114.114.114.114
 server=/youshifu.com/114.114.114.114
 server=/youshikoudai.com/114.114.114.114
+server=/youshionline.com/114.114.114.114
 server=/youshixiu.com/114.114.114.114
 server=/youshop01.com/114.114.114.114
 server=/youshop02.com/114.114.114.114
