--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2912,6 +2912,7 @@ server=/28ka.com/114.114.114.114
 server=/28khy.com/114.114.114.114
 server=/28qp.com/114.114.114.114
 server=/28rv.com/114.114.114.114
+server=/28sog.com/114.114.114.114
 server=/28tui.com/114.114.114.114
 server=/28z9.com/114.114.114.114
 server=/28zhe.com/114.114.114.114
