--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77807,6 +77807,7 @@ server=/theorychina.org/114.114.114.114
 server=/thepeak.com.my/114.114.114.114
 server=/thepoemforyou.com/114.114.114.114
 server=/thepotboiler.com/114.114.114.114
+server=/thepsychscrivener.com/114.114.114.114
 server=/thepuli.com/114.114.114.114
 server=/therasaganga.com/114.114.114.114
 server=/thereszhaiproject.com/114.114.114.114
