accelerated-domains: add qianlingdz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66210,6 +66210,7 @@ server=/qianlima.com/114.114.114.114
 server=/qianlimafile.com/114.114.114.114
 server=/qianlimazb.com/114.114.114.114
 server=/qianling.pw/114.114.114.114
+server=/qianlingdz.com/114.114.114.114
 server=/qianlinkj.com/114.114.114.114
 server=/qianlong.com/114.114.114.114
 server=/qianluxiaoshuo.com/114.114.114.114
