--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16703,6 +16703,7 @@ server=/c1a0.com/114.114.114.114
 server=/c1a3.com/114.114.114.114
 server=/c1ass.com/114.114.114.114
 server=/c1channel.com/114.114.114.114
+server=/c1el.com/114.114.114.114
 server=/c1km4.com/114.114.114.114
 server=/c1s.com/114.114.114.114
 server=/c2contact.com/114.114.114.114
