--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57374,6 +57374,7 @@ server=/meidebi.com/114.114.114.114
 server=/meidecloud.com/114.114.114.114
 server=/meideng.net/114.114.114.114
 server=/meidunyipin.com/114.114.114.114
+server=/meiduoxian.com/114.114.114.114
 server=/meidusacloud.com/114.114.114.114
 server=/meierbei.com/114.114.114.114
 server=/meifang.com/114.114.114.114
