--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9032,6 +9032,7 @@ server=/aavisa.com/114.114.114.114
 server=/aaw.asia/114.114.114.114
 server=/aawvw.com/114.114.114.114
 server=/aaxinwen.net/114.114.114.114
+server=/aaxtreme.com/114.114.114.114
 server=/aaygw.com/114.114.114.114
 server=/aaym.net/114.114.114.114
 server=/aayu.today/114.114.114.114
