--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40698,6 +40698,7 @@ server=/hnjg.com/114.114.114.114
 server=/hnjiabao.com/114.114.114.114
 server=/hnjing.com/114.114.114.114
 server=/hnjing.net/114.114.114.114
+server=/hnjixiao.net/114.114.114.114
 server=/hnjkjn.com/114.114.114.114
 server=/hnjkw.net/114.114.114.114
 server=/hnjmsk.com/114.114.114.114
