accelerated-domains: add lawugu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52823,6 +52823,7 @@ server=/lawrencetsui.com/114.114.114.114
 server=/lawsdata.com/114.114.114.114
 server=/lawsynthesis.com/114.114.114.114
 server=/lawtimeimg.com/114.114.114.114
+server=/lawugu.com/114.114.114.114
 server=/lawxin.com/114.114.114.114
 server=/lawxp.com/114.114.114.114
 server=/lawyee.com/114.114.114.114
