--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23224,6 +23224,7 @@ server=/cupmcn.com/114.114.114.114
 server=/curlc.com/114.114.114.114
 server=/curtisasia.com/114.114.114.114
 server=/cusdvs.net/114.114.114.114
+server=/cusohome.com/114.114.114.114
 server=/custeel.com/114.114.114.114
 server=/customizedfasteners.com/114.114.114.114
 server=/customsapp.com/114.114.114.114
