--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28908,6 +28908,7 @@ server=/escjy.com/114.114.114.114
 server=/esclt.net/114.114.114.114
 server=/esdaxiagu.com/114.114.114.114
 server=/esde.cc/114.114.114.114
+server=/esdxcg.com/114.114.114.114
 server=/esemseo.com/114.114.114.114
 server=/esensoft.com/114.114.114.114
 server=/esfimg.com/114.114.114.114
