accelerated-domains: add jhbee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46840,6 +46840,7 @@ server=/jh3pin.com/114.114.114.114
 server=/jh5l.com/114.114.114.114
 server=/jh8k.com/114.114.114.114
 server=/jhaoyou.com/114.114.114.114
+server=/jhbee.com/114.114.114.114
 server=/jhcb.net/114.114.114.114
 server=/jhcfz.com/114.114.114.114
 server=/jhcheku.com/114.114.114.114
