accelerated-domains: add dragontsc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26688,6 +26688,7 @@ server=/dragonlcm.com/114.114.114.114
 server=/dragonnewsru.com/114.114.114.114
 server=/dragonsea-china.com/114.114.114.114
 server=/dragontrail.com/114.114.114.114
+server=/dragontsc.com/114.114.114.114
 server=/dragonwell-jdk.io/114.114.114.114
 server=/drakeet.com/114.114.114.114
 server=/dramx.com/114.114.114.114
