--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70135,6 +70135,7 @@ server=/scbaidu.com/114.114.114.114
 server=/scbao.com/114.114.114.114
 server=/scbgaudio.com/114.114.114.114
 server=/scbh15.com/114.114.114.114
+server=/scbotai.com/114.114.114.114
 server=/scbt.asia/114.114.114.114
 server=/scbxmr.com/114.114.114.114
 server=/scbyx.net/114.114.114.114
