--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78021,6 +78021,7 @@ server=/tianlungas.com/114.114.114.114
 server=/tianma3600.com/114.114.114.114
 server=/tianmaijigou.com/114.114.114.114
 server=/tianmao.com/114.114.114.114
+server=/tianmarketing.com/114.114.114.114
 server=/tianmawx.com/114.114.114.114
 server=/tianmaying.com/114.114.114.114
 server=/tianmidian.com/114.114.114.114
