accelerated-domains: add fqhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31219,6 +31219,7 @@ server=/fq688.com/114.114.114.114
 server=/fqapps.com/114.114.114.114
 server=/fqcqf.com/114.114.114.114
 server=/fqfilm.com/114.114.114.114
+server=/fqhospital.com/114.114.114.114
 server=/fqis.xin/114.114.114.114
 server=/fqkf.com/114.114.114.114
 server=/fqlook.com/114.114.114.114
