--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49257,6 +49257,7 @@ server=/jsxhrcb.com/114.114.114.114
 server=/jsxht.com/114.114.114.114
 server=/jsxhw.org/114.114.114.114
 server=/jsxhxmhj.com/114.114.114.114
+server=/jsxiangtanzi.com/114.114.114.114
 server=/jsxiaoguo.com/114.114.114.114
 server=/jsxiaoshi.com/114.114.114.114
 server=/jsxinfeng.com/114.114.114.114
