--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58261,6 +58261,7 @@ server=/minchuangdjk.com/114.114.114.114
 server=/mincoder.com/114.114.114.114
 server=/mind-home.net/114.114.114.114
 server=/mindai.com/114.114.114.114
+server=/mindboil.com/114.114.114.114
 server=/mindcherish.com/114.114.114.114
 server=/mindcontroles.com/114.114.114.114
 server=/mindechem.com/114.114.114.114
