--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18122,6 +18122,7 @@ server=/ceitcl.com/114.114.114.114
 server=/cekeis.com/114.114.114.114
 server=/cekid.com/114.114.114.114
 server=/celebpalace.com/114.114.114.114
+server=/celebritywallpapershq.com/114.114.114.114
 server=/celhr.com/114.114.114.114
 server=/celiang.net/114.114.114.114
 server=/celinlawyers.com/114.114.114.114
