--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41301,6 +41301,7 @@ server=/hottui.com/114.114.114.114
 server=/hotwatchsreplica.com/114.114.114.114
 server=/hotwind.net/114.114.114.114
 server=/hotwindbox.com/114.114.114.114
+server=/hotxdot.com/114.114.114.114
 server=/hotxf.com/114.114.114.114
 server=/hotyihao.com/114.114.114.114
 server=/hou5.com/114.114.114.114
