accelerated-domains: add jj-1918.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48234,6 +48234,7 @@ server=/jizhuba.com/114.114.114.114
 server=/jizhuomi.com/114.114.114.114
 server=/jizhutaoke.com/114.114.114.114
 server=/jiziyy.com/114.114.114.114
+server=/jj-1918.com/114.114.114.114
 server=/jj-d.com/114.114.114.114
 server=/jj-inn.com/114.114.114.114
 server=/jj00.com/114.114.114.114
