--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50327,6 +50327,7 @@ server=/kakayuy.net/114.114.114.114
 server=/kaku-scdn.com/114.114.114.114
 server=/kakucloud.com/114.114.114.114
 server=/kalading.com/114.114.114.114
+server=/kalamitsibeach.com/114.114.114.114
 server=/kalazan.com/114.114.114.114
 server=/kalcaddle.com/114.114.114.114
 server=/kalegou.com/114.114.114.114
