--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63496,6 +63496,7 @@ server=/ouyi.date/114.114.114.114
 server=/ouyingyimin.com/114.114.114.114
 server=/ouyizs.com/114.114.114.114
 server=/ouyu158.com/114.114.114.114
+server=/ouyu668.com/114.114.114.114
 server=/ouyuxie8.com/114.114.114.114
 server=/ouzhaorj.com/114.114.114.114
 server=/ouzhou.cc/114.114.114.114
