accelerated-domains: add dehejigou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24716,6 +24716,7 @@ server=/degitec-jiangyin.com/114.114.114.114
 server=/deguoguanjia.com/114.114.114.114
 server=/dehe99.com/114.114.114.114
 server=/deheheng.com/114.114.114.114
+server=/dehejigou.com/114.114.114.114
 server=/deheng.com/114.114.114.114
 server=/dehengclinic.com/114.114.114.114
 server=/dehenglaw.com/114.114.114.114
