--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87283,6 +87283,7 @@ server=/xiaolinwl.com/114.114.114.114
 server=/xiaoliqing.net/114.114.114.114
 server=/xiaoliublog.icu/114.114.114.114
 server=/xiaolizhuli.com/114.114.114.114
+server=/xiaolongxy.com/114.114.114.114
 server=/xiaoluboke.com/114.114.114.114
 server=/xiaoluerhuo.com/114.114.114.114
 server=/xiaoluxuanfang.com/114.114.114.114
