accelerated-domains: add stylemafiadaily.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75131,6 +75131,7 @@ server=/stylar.hk/114.114.114.114
 server=/stylecdn.com/114.114.114.114
 server=/stylechina.com/114.114.114.114
 server=/stylecho.com/114.114.114.114
+server=/stylemafiadaily.com/114.114.114.114
 server=/styles-sys.com/114.114.114.114
 server=/stymqd.xyz/114.114.114.114
 server=/styst.net/114.114.114.114
