--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55940,6 +55940,7 @@ server=/lxhuwai.net/114.114.114.114
 server=/lxi.me/114.114.114.114
 server=/lxin007.com/114.114.114.114
 server=/lxjapp.com/114.114.114.114
+server=/lxkj.info/114.114.114.114
 server=/lxkj.site/114.114.114.114
 server=/lxkj2022.com/114.114.114.114
 server=/lxlinux.net/114.114.114.114
