accelerated-domains: add dvdduplicationphoenix.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27216,6 +27216,7 @@ server=/dvbcn.com/114.114.114.114
 server=/dvbei.com/114.114.114.114
 server=/dvd2017.com.tw/114.114.114.114
 server=/dvdc100.com/114.114.114.114
+server=/dvdduplicationphoenix.net/114.114.114.114
 server=/dvidc.com/114.114.114.114
 server=/dvmama.com/114.114.114.114
 server=/dvmission.com/114.114.114.114
