--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71556,6 +71556,7 @@ server=/shanhuu.com/114.114.114.114
 server=/shanhuxueyuan.com/114.114.114.114
 server=/shanji.club/114.114.114.114
 server=/shanjianzhan.com/114.114.114.114
+server=/shanjingyuan.com/114.114.114.114
 server=/shanjinqh.com/114.114.114.114
 server=/shankejingling.com/114.114.114.114
 server=/shanks.link/114.114.114.114
