accelerated-domains: add cherylalopes.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18942,6 +18942,7 @@ server=/cheonhyeong.com/114.114.114.114
 server=/cheoo.com/114.114.114.114
 server=/cheoz.com/114.114.114.114
 server=/chervonauto.com/114.114.114.114
+server=/cherylalopes.com/114.114.114.114
 server=/cherymanuals.com/114.114.114.114
 server=/cheshenghuo.com/114.114.114.114
 server=/cheshi-img.com/114.114.114.114
