accelerated-domains: add shhanjunco.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72042,6 +72042,7 @@ server=/shgskj.com/114.114.114.114
 server=/shgtheatre.com/114.114.114.114
 server=/shguanmai.com/114.114.114.114
 server=/shgyg.com/114.114.114.114
+server=/shhanjunco.com/114.114.114.114
 server=/shhanqiao.com/114.114.114.114
 server=/shhbgm.com/114.114.114.114
 server=/shhcpm.com/114.114.114.114
