--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55647,6 +55647,7 @@ server=/luochenyl.com/114.114.114.114
 server=/luochenzhimu.com/114.114.114.114
 server=/luodian.com/114.114.114.114
 server=/luodw.cc/114.114.114.114
+server=/luoergai.com/114.114.114.114
 server=/luofan.net/114.114.114.114
 server=/luogu.org/114.114.114.114
 server=/luohanacademy.com/114.114.114.114
