accelerated-domains: add njxcjc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61454,6 +61454,7 @@ server=/njwuhe.com/114.114.114.114
 server=/njwww.net/114.114.114.114
 server=/njwzjsw.com/114.114.114.114
 server=/njxax.com/114.114.114.114
+server=/njxcjc.com/114.114.114.114
 server=/njxiaochi.com/114.114.114.114
 server=/njxkyy.net/114.114.114.114
 server=/njxlmz.com/114.114.114.114
