accelerated-domains: add taopxx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77074,6 +77074,7 @@ server=/taopb.com/114.114.114.114
 server=/taopiaopiao.com/114.114.114.114
 server=/taopic.com/114.114.114.114
 server=/taopinquan.com/114.114.114.114
+server=/taopxx.com/114.114.114.114
 server=/taoq.net/114.114.114.114
 server=/taoqao.com/114.114.114.114
 server=/taoqian123.com/114.114.114.114
