accelerated-domains: add xsskw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89336,6 +89336,7 @@ server=/xss.tv/114.114.114.114
 server=/xssdcdn.com/114.114.114.114
 server=/xsser.date/114.114.114.114
 server=/xsshuku.com/114.114.114.114
+server=/xsskw.com/114.114.114.114
 server=/xsslyjt.com/114.114.114.114
 server=/xssyidc.com/114.114.114.114
 server=/xssz.net/114.114.114.114
