accelerated-domains: add yidainvestment.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91417,6 +91417,7 @@ server=/yidadrillcollar.com/114.114.114.114
 server=/yidahospital.com/114.114.114.114
 server=/yidai.com/114.114.114.114
 server=/yidaidai.com/114.114.114.114
+server=/yidainvestment.com/114.114.114.114
 server=/yidaointernational.com/114.114.114.114
 server=/yidaomall.com/114.114.114.114
 server=/yidaomobi.com/114.114.114.114
