--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37666,6 +37666,7 @@ server=/gzxict.com/114.114.114.114
 server=/gzxijiu.com/114.114.114.114
 server=/gzxinfo.com/114.114.114.114
 server=/gzxjgc.com/114.114.114.114
+server=/gzxkljj.com/114.114.114.114
 server=/gzxswh.com/114.114.114.114
 server=/gzxszf.com/114.114.114.114
 server=/gzxulang.com/114.114.114.114
