accelerated-domains: add qkkjbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66977,6 +66977,7 @@ server=/qkhg.com/114.114.114.114
 server=/qking.ink/114.114.114.114
 server=/qkisp.com/114.114.114.114
 server=/qkkj88.com/114.114.114.114
+server=/qkkjbj.com/114.114.114.114
 server=/qkkjd.com/114.114.114.114
 server=/qkl123.com/114.114.114.114
 server=/qkl234.com/114.114.114.114
