--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80654,6 +80654,7 @@ server=/ukpass.org/114.114.114.114
 server=/ukpathway.com/114.114.114.114
 server=/ukplanking.com/114.114.114.114
 server=/ukrainevisacenter.com/114.114.114.114
+server=/ukrorgsynth.com/114.114.114.114
 server=/ukubang.com/114.114.114.114
 server=/ukui.org/114.114.114.114
 server=/ukulelecn.com/114.114.114.114
