accelerated-domains: add zhenbatech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95957,6 +95957,7 @@ server=/zhenaihn.com/114.114.114.114
 server=/zhenandl.com/114.114.114.114
 server=/zhenanpark.com/114.114.114.114
 server=/zhenaoyaoye.com/114.114.114.114
+server=/zhenbatech.com/114.114.114.114
 server=/zhenbi.com/114.114.114.114
 server=/zhenbizi.com/114.114.114.114
 server=/zhenbon.com/114.114.114.114
