accelerated-domains: add rnhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69036,6 +69036,7 @@ server=/rn-hswh.com/114.114.114.114
 server=/rnfengwo.com/114.114.114.114
 server=/rngmoe.com/114.114.114.114
 server=/rngtest.com/114.114.114.114
+server=/rnhospital.com/114.114.114.114
 server=/rnhy.net/114.114.114.114
 server=/rnmgn.net/114.114.114.114
 server=/rnw7f6jfk8.vip/114.114.114.114
