accelerated-domains: add gmtacoa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33730,6 +33730,7 @@ server=/gmswl.com/114.114.114.114
 server=/gmsyun.com/114.114.114.114
 server=/gmt-china.org/114.114.114.114
 server=/gmt-cn.com/114.114.114.114
+server=/gmtacoa.com/114.114.114.114
 server=/gmtgx.com/114.114.114.114
 server=/gmtv.cc/114.114.114.114
 server=/gmtzy.com/114.114.114.114
