accelerated-domains: add aifeiyao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9929,6 +9929,7 @@ server=/aifangke.com/114.114.114.114
 server=/aifanyi.net/114.114.114.114
 server=/aifcdn.com/114.114.114.114
 server=/aifei.info/114.114.114.114
+server=/aifeiyao.com/114.114.114.114
 server=/aifengjie.com/114.114.114.114
 server=/aifengkeji.com/114.114.114.114
 server=/aifenlei.com/114.114.114.114
