--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98205,6 +98205,7 @@ server=/ztidu.com/114.114.114.114
 server=/ztinfoga.com/114.114.114.114
 server=/ztjczx.com/114.114.114.114
 server=/ztjinchi.com/114.114.114.114
+server=/ztjlt.com/114.114.114.114
 server=/ztjoin.com/114.114.114.114
 server=/ztjttz.com/114.114.114.114
 server=/ztjy61.com/114.114.114.114
