--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20741,6 +20741,7 @@ server=/cllk.net/114.114.114.114
 server=/clloz.com/114.114.114.114
 server=/clmmw.com/114.114.114.114
 server=/clngaa.com/114.114.114.114
+server=/clnzl.com/114.114.114.114
 server=/cloooud.com/114.114.114.114
 server=/cloopen.com/114.114.114.114
 server=/cloopen.net/114.114.114.114
