--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85835,6 +85835,7 @@ server=/www.st.com/114.114.114.114
 server=/www.tutorabc.com/114.114.114.114
 server=/www.viveport.com/114.114.114.114
 server=/www.volvocars.com/114.114.114.114
+server=/www003xx.com/114.114.114.114
 server=/www1.djicdn.com/114.114.114.114
 server=/www2.djicdn.com/114.114.114.114
 server=/www2489.com/114.114.114.114
