accelerated-domains: add allergy-iq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10765,6 +10765,7 @@ server=/alldobetter.com/114.114.114.114
 server=/alldragon.com/114.114.114.114
 server=/alleadprint.com/114.114.114.114
 server=/allenmarket.com/114.114.114.114
+server=/allergy-iq.com/114.114.114.114
 server=/allfang.com/114.114.114.114
 server=/allfoodsg.com/114.114.114.114
 server=/allfootballapp.com/114.114.114.114
