--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67284,6 +67284,7 @@ server=/qqyy.com/114.114.114.114
 server=/qqz1.com/114.114.114.114
 server=/qqz7.com/114.114.114.114
 server=/qqzby.net/114.114.114.114
+server=/qqzfw.com/114.114.114.114
 server=/qqzhi.com/114.114.114.114
 server=/qqzi.net/114.114.114.114
 server=/qqzl.cc/114.114.114.114
