--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90833,6 +90833,7 @@ server=/ychedu.com/114.114.114.114
 server=/ychromedgeie.com/114.114.114.114
 server=/ychxie.com/114.114.114.114
 server=/ychxiex.com/114.114.114.114
+server=/ychzaj.com/114.114.114.114
 server=/ycig.com/114.114.114.114
 server=/ycigilink.com/114.114.114.114
 server=/yciou.com/114.114.114.114
