accelerated-domains: add relenger.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68617,6 +68617,7 @@ server=/rekoo.net/114.114.114.114
 server=/rela.me/114.114.114.114
 server=/relangba.com/114.114.114.114
 server=/relayx.io/114.114.114.114
+server=/relenger.com/114.114.114.114
 server=/reliangbiao.com/114.114.114.114
 server=/reliao.tv/114.114.114.114
 server=/reloadbuzz.com/114.114.114.114
