accelerated-domains: add xtrgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89419,6 +89419,7 @@ server=/xtowork.com/114.114.114.114
 server=/xtransfer.com/114.114.114.114
 server=/xtrapowercn.com/114.114.114.114
 server=/xtrc.net/114.114.114.114
+server=/xtrgc.com/114.114.114.114
 server=/xtrunc.com/114.114.114.114
 server=/xtsfuke.com/114.114.114.114
 server=/xttaff.com/114.114.114.114
