--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9514,6 +9514,7 @@ server=/aero-shenyang.com/114.114.114.114
 server=/aerochina.net/114.114.114.114
 server=/aeryt111.fun/114.114.114.114
 server=/aesdrink.com/114.114.114.114
+server=/aesmysecurebill.com/114.114.114.114
 server=/aestheticbutler.xyz/114.114.114.114
 server=/aesucai.com/114.114.114.114
 server=/aet21.com/114.114.114.114
