accelerated-domains: add renqitong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68675,6 +68675,7 @@ server=/renminkaiguan.com/114.114.114.114
 server=/renminyixue.com/114.114.114.114
 server=/renny.ren/114.114.114.114
 server=/renping.cc/114.114.114.114
+server=/renqitong.com/114.114.114.114
 server=/renren-inc.com/114.114.114.114
 server=/renren.com/114.114.114.114
 server=/renren.io/114.114.114.114
