accelerated-domains: add chuangweikeji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20160,6 +20160,7 @@ server=/chuangshiwl.com/114.114.114.114
 server=/chuangshiyuli.com/114.114.114.114
 server=/chuangtie.com/114.114.114.114
 server=/chuangtoo.com/114.114.114.114
+server=/chuangweikeji.com/114.114.114.114
 server=/chuangx.org/114.114.114.114
 server=/chuangxin.com/114.114.114.114
 server=/chuangxinapi.com/114.114.114.114
