--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76236,6 +76236,7 @@ server=/szcy99.com/114.114.114.114
 server=/szczjy.com/114.114.114.114
 server=/szczkjgs.com/114.114.114.114
 server=/szdaily.com/114.114.114.114
+server=/szdarong56.com/114.114.114.114
 server=/szdc.org/114.114.114.114
 server=/szdcjd.com/114.114.114.114
 server=/szddns.net/114.114.114.114
