--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9789,6 +9789,7 @@ server=/ai.cc/114.114.114.114
 server=/ai012.com/114.114.114.114
 server=/ai257.com/114.114.114.114
 server=/ai2news.com/114.114.114.114
+server=/ai572.com/114.114.114.114
 server=/ai7.com/114.114.114.114
 server=/ai7.org/114.114.114.114
 server=/aiagain.com/114.114.114.114
