--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82629,6 +82629,7 @@ server=/wandodo.com/114.114.114.114
 server=/wandoer.com/114.114.114.114
 server=/wandongli.com/114.114.114.114
 server=/wandouip.com/114.114.114.114
+server=/wandouji.com/114.114.114.114
 server=/wandoujia.com/114.114.114.114
 server=/waneziyuan.com/114.114.114.114
 server=/wanfangche.com/114.114.114.114
