--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62341,6 +62341,7 @@ server=/nucc.com/114.114.114.114
 server=/nucleisys.com/114.114.114.114
 server=/nuctech.com/114.114.114.114
 server=/nudaopws.com/114.114.114.114
+server=/nudluskalin.com/114.114.114.114
 server=/nuedcchina.com/114.114.114.114
 server=/nufans.net/114.114.114.114
 server=/nuhcpf.com/114.114.114.114
