--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90001,6 +90001,7 @@ server=/xxxx68xxxx.com/114.114.114.114
 server=/xxxx88xxxx.com/114.114.114.114
 server=/xxxx92xxxx.com/114.114.114.114
 server=/xxxx96xxxx.com/114.114.114.114
+server=/xxxxxx6.com/114.114.114.114
 server=/xxxzzlm.org/114.114.114.114
 server=/xxycw.com/114.114.114.114
 server=/xxyeyan.com/114.114.114.114
