--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50879,6 +50879,7 @@ server=/kexianggroup.com/114.114.114.114
 server=/kexin001.com/114.114.114.114
 server=/kexing100.com/114.114.114.114
 server=/kexingchem.com/114.114.114.114
+server=/kexinggy.com/114.114.114.114
 server=/kexinguoji.com/114.114.114.114
 server=/kexinhaoma.org/114.114.114.114
 server=/kexinshe.com/114.114.114.114
