accelerated-domains: add wanfoquan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82640,6 +82640,7 @@ server=/wanfangs.com/114.114.114.114
 server=/wanfangtech.com/114.114.114.114
 server=/wanfangtech.net/114.114.114.114
 server=/wanfantian.com/114.114.114.114
+server=/wanfoquan.com/114.114.114.114
 server=/wanfucc.com/114.114.114.114
 server=/wanfudaluye.com/114.114.114.114
 server=/wanfukang.cc/114.114.114.114
