--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27859,6 +27859,7 @@ server=/ebtang.com/114.114.114.114
 server=/ebtcbank.com/114.114.114.114
 server=/ebtrust.com/114.114.114.114
 server=/ebuckler.com/114.114.114.114
+server=/ebullienceconsultancy.com/114.114.114.114
 server=/ebuy16.com/114.114.114.114
 server=/ebways.com/114.114.114.114
 server=/ebyte.com/114.114.114.114
