--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41279,6 +41279,7 @@ server=/hotcoin.com/114.114.114.114
 server=/hotdb.com/114.114.114.114
 server=/hoteamsoft.com/114.114.114.114
 server=/hoteastday.com/114.114.114.114
+server=/hotel-ochsen-hardheim.com/114.114.114.114
 server=/hotelcis.com/114.114.114.114
 server=/hoteldig.com/114.114.114.114
 server=/hotelgg.com/114.114.114.114
