accelerated-domains: add sqbtf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74684,6 +74684,7 @@ server=/sq688.com/114.114.114.114
 server=/sqa-chn.com/114.114.114.114
 server=/sqage.com/114.114.114.114
 server=/sqbaite.com/114.114.114.114
+server=/sqbtf.com/114.114.114.114
 server=/sqchunqiu.com/114.114.114.114
 server=/sqdaily.com/114.114.114.114
 server=/sqeatin.com/114.114.114.114
