accelerated-domains: add dongrunsport.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26342,6 +26342,7 @@ server=/dongputech.com/114.114.114.114
 server=/dongqiniqin.com/114.114.114.114
 server=/dongqiudi.com/114.114.114.114
 server=/dongqiudi.net/114.114.114.114
+server=/dongrunsport.com/114.114.114.114
 server=/dongrv.com/114.114.114.114
 server=/dongsentire.com/114.114.114.114
 server=/dongsenzs.com/114.114.114.114
