--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98134,6 +98134,7 @@ server=/zsihuo.com/114.114.114.114
 server=/zsincer.com/114.114.114.114
 server=/zsite.com/114.114.114.114
 server=/zsj18.com/114.114.114.114
+server=/zsjhsjy.com/114.114.114.114
 server=/zsjinqi.com/114.114.114.114
 server=/zsjjyp.com/114.114.114.114
 server=/zsjuchuang.com/114.114.114.114
