--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68615,6 +68615,7 @@ server=/reglogo.net/114.114.114.114
 server=/regtm.com/114.114.114.114
 server=/rehiy.com/114.114.114.114
 server=/rehtt.com/114.114.114.114
+server=/rehuolm.com/114.114.114.114
 server=/rehuwang.com/114.114.114.114
 server=/reilybrand.com/114.114.114.114
 server=/reinness.com/114.114.114.114
