--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18823,6 +18823,7 @@ server=/chengduzhishang.com/114.114.114.114
 server=/chengduzhouming.com/114.114.114.114
 server=/chengegeya.com/114.114.114.114
 server=/chengezhao.com/114.114.114.114
+server=/chengfankj.com/114.114.114.114
 server=/chengfeilong.com/114.114.114.114
 server=/chengfengboli.com/114.114.114.114
 server=/chengfengerlai.com/114.114.114.114
