--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50965,6 +50965,7 @@ server=/kh-zx.com/114.114.114.114
 server=/khdatasolutions.com/114.114.114.114
 server=/khdmw.com/114.114.114.114
 server=/khfwedu.com/114.114.114.114
+server=/khggk.com/114.114.114.114
 server=/khhlw.com/114.114.114.114
 server=/khlysc.com/114.114.114.114
 server=/khotyn.com/114.114.114.114
