accelerated-domains: add aliajj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10463,6 +10463,7 @@ server=/ali213.net/114.114.114.114
 server=/ali37.net/114.114.114.114
 server=/aliadvance.com/114.114.114.114
 server=/aliagain.com/114.114.114.114
+server=/aliajj.com/114.114.114.114
 server=/alianhome.com/114.114.114.114
 server=/aliapp-inc.com/114.114.114.114
 server=/aliapp.com/114.114.114.114
