accelerated-domains: add rz-xxy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69717,6 +69717,7 @@ server=/ryylkj.com/114.114.114.114
 server=/ryyqh.com/114.114.114.114
 server=/rz-cam.com/114.114.114.114
 server=/rz-cm.com/114.114.114.114
+server=/rz-xxy.com/114.114.114.114
 server=/rz.com/114.114.114.114
 server=/rz.sb/114.114.114.114
 server=/rz1158.com/114.114.114.114
