accelerated-domains: add sousuoshidai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74500,6 +74500,7 @@ server=/soushoubiao.com/114.114.114.114
 server=/sousou.com/114.114.114.114
 server=/sousou.pro/114.114.114.114
 server=/sousoudus.com/114.114.114.114
+server=/sousuoshidai.com/114.114.114.114
 server=/southbeauty.com/114.114.114.114
 server=/southbeautygroup.com/114.114.114.114
 server=/southcn.com/114.114.114.114
