--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22063,6 +22063,7 @@ server=/collaborateppe.download.prss.microsoft.com/114.114.114.114
 server=/collect-med.com/114.114.114.114
 server=/college-ing.com/114.114.114.114
 server=/colly-pink.com/114.114.114.114
+server=/collycn.com/114.114.114.114
 server=/colobu.com/114.114.114.114
 server=/color-measure.com/114.114.114.114
 server=/color365.com/114.114.114.114
