--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -174,6 +174,7 @@ server=/021dzjx.com/114.114.114.114
 server=/021east.com/114.114.114.114
 server=/021easystudy.com/114.114.114.114
 server=/021gjhb.com/114.114.114.114
+server=/021huamei.com/114.114.114.114
 server=/021huaying.com/114.114.114.114
 server=/021images.com/114.114.114.114
 server=/021images.vip/114.114.114.114
