--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -179,6 +179,7 @@ server=/021huaying.com/114.114.114.114
 server=/021images.com/114.114.114.114
 server=/021images.vip/114.114.114.114
 server=/021ja.com/114.114.114.114
+server=/021jgyy.com/114.114.114.114
 server=/021jingwei.com/114.114.114.114
 server=/021jingwu.com/114.114.114.114
 server=/021lawfirm.com/114.114.114.114
