--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -231,6 +231,7 @@ server=/025nj.com/114.114.114.114
 server=/025njtf.com/114.114.114.114
 server=/025sc.com/114.114.114.114
 server=/025suyu.com/114.114.114.114
+server=/025tffs.com/114.114.114.114
 server=/025tuopan.com/114.114.114.114
 server=/025xl.com/114.114.114.114
 server=/025zp.com/114.114.114.114
