accelerated-domains: add 120cihui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1198,6 +1198,7 @@ server=/120ask.com/114.114.114.114
 server=/120askimages.com/114.114.114.114
 server=/120bid.com/114.114.114.114
 server=/120btc.com/114.114.114.114
+server=/120cihui.com/114.114.114.114
 server=/120fd.com/114.114.114.114
 server=/120it.com/114.114.114.114
 server=/120jhccz.com/114.114.114.114
