--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1707,6 +1707,7 @@ server=/169666.xyz/114.114.114.114
 server=/169700.com/114.114.114.114
 server=/16999.com/114.114.114.114
 server=/169it.com/114.114.114.114
+server=/169jk.com/114.114.114.114
 server=/169kang.com/114.114.114.114
 server=/169ol.com/114.114.114.114
 server=/16app.tv/114.114.114.114
