--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4071,6 +4071,7 @@ server=/3rcd.com/114.114.114.114
 server=/3renhe.net/114.114.114.114
 server=/3richman.com/114.114.114.114
 server=/3rotber.com/114.114.114.114
+server=/3rroll.com/114.114.114.114
 server=/3s.work/114.114.114.114
 server=/3s001.com/114.114.114.114
 server=/3s78.com/114.114.114.114
