accelerated-domains: add 51mch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4943,6 +4943,7 @@ server=/51lzr.com/114.114.114.114
 server=/51mag.com/114.114.114.114
 server=/51maiquan.com/114.114.114.114
 server=/51marryyou.com/114.114.114.114
+server=/51mch.com/114.114.114.114
 server=/51mdd.com/114.114.114.114
 server=/51mdq.com/114.114.114.114
 server=/51meeting.com/114.114.114.114
