--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4967,6 +4967,7 @@ server=/51mockup.com/114.114.114.114
 server=/51mokao.com/114.114.114.114
 server=/51mole.com/114.114.114.114
 server=/51moot.net/114.114.114.114
+server=/51mpa.net/114.114.114.114
 server=/51mrp.com/114.114.114.114
 server=/51msc.com/114.114.114.114
 server=/51mta.com/114.114.114.114
