accelerated-domains: add 51race.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5017,6 +5017,7 @@ server=/51qudao888.com/114.114.114.114
 server=/51qudong.net/114.114.114.114
 server=/51qumi.com/114.114.114.114
 server=/51quzhe.com/114.114.114.114
+server=/51race.com/114.114.114.114
 server=/51rc.com/114.114.114.114
 server=/51rcsl.com/114.114.114.114
 server=/51read.site/114.114.114.114
