--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6635,6 +6635,7 @@ server=/68design.net/114.114.114.114
 server=/68eg.com/114.114.114.114
 server=/68gainian.com/114.114.114.114
 server=/68hanchen.com/114.114.114.114
+server=/68hlw.com/114.114.114.114
 server=/68hr.com/114.114.114.114
 server=/68jmw.com/114.114.114.114
 server=/68ke.com/114.114.114.114
