--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7784,6 +7784,7 @@ server=/88popo.com/114.114.114.114
 server=/88r8.net/114.114.114.114
 server=/88rpg.net/114.114.114.114
 server=/88sup.com/114.114.114.114
+server=/88sus.com/114.114.114.114
 server=/88tang.com/114.114.114.114
 server=/88tejia.com/114.114.114.114
 server=/88tm6.cc/114.114.114.114
