accelerated-domains: add adm999.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9388,6 +9388,7 @@ server=/adlefee.com/114.114.114.114
 server=/adlefei.com/114.114.114.114
 server=/adluckin.com/114.114.114.114
 server=/adm88888.com/114.114.114.114
+server=/adm999.com/114.114.114.114
 server=/admai.com/114.114.114.114
 server=/admaimai.com/114.114.114.114
 server=/admaji.com/114.114.114.114
