--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9705,6 +9705,7 @@ server=/ahhngsjt.com/114.114.114.114
 server=/ahhnsz.net/114.114.114.114
 server=/ahhouse.com/114.114.114.114
 server=/ahhrjc.com/114.114.114.114
+server=/ahhsxyy.com/114.114.114.114
 server=/ahhtzx.com/114.114.114.114
 server=/ahhwdp.com/114.114.114.114
 server=/ahhyzn.com/114.114.114.114
