--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9758,6 +9758,7 @@ server=/ahrenkun.com/114.114.114.114
 server=/ahrunzi.com/114.114.114.114
 server=/ahs.pub/114.114.114.114
 server=/ahscl.com/114.114.114.114
+server=/ahscxyy.com/114.114.114.114
 server=/ahsea.com/114.114.114.114
 server=/ahsj-group.com/114.114.114.114
 server=/ahsjxjy.com/114.114.114.114
