accelerated-domains: add ahzxy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9802,6 +9802,7 @@ server=/ahyx.net/114.114.114.114
 server=/ahzcw.cc/114.114.114.114
 server=/ahzs10000.com/114.114.114.114
 server=/ahzssw.com/114.114.114.114
+server=/ahzxy.com/114.114.114.114
 server=/ai-abc.com/114.114.114.114
 server=/ai-anchor.com/114.114.114.114
 server=/ai-cai.com/114.114.114.114
