--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9943,6 +9943,7 @@ server=/aiegle.com/114.114.114.114
 server=/aiema.com/114.114.114.114
 server=/aiemy.com/114.114.114.114
 server=/aieok.com/114.114.114.114
+server=/aier020.com/114.114.114.114
 server=/aier021.com/114.114.114.114
 server=/aier0431.com/114.114.114.114
 server=/aier0755.com/114.114.114.114
