--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10062,6 +10062,7 @@ server=/ailewan.com/114.114.114.114
 server=/aileyun.net/114.114.114.114
 server=/aili.com/114.114.114.114
 server=/ailiao360.com/114.114.114.114
+server=/ailibi.com/114.114.114.114
 server=/ailicee.com/114.114.114.114
 server=/ailinglei.com/114.114.114.114
 server=/ailingmao.com/114.114.114.114
