accelerated-domains: add ak03150hou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10393,6 +10393,7 @@ server=/ajwang.com/114.114.114.114
 server=/ajyg.com/114.114.114.114
 server=/ajylqio.com/114.114.114.114
 server=/ak0.tw/114.114.114.114
+server=/ak03150hou.com/114.114.114.114
 server=/ak03220hou.com/114.114.114.114
 server=/ak03230hou.com/114.114.114.114
 server=/ak1ak1.com/114.114.114.114
