accelerated-domains: add ak03211hou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10394,6 +10394,7 @@ server=/ajyg.com/114.114.114.114
 server=/ajylqio.com/114.114.114.114
 server=/ak0.tw/114.114.114.114
 server=/ak03150hou.com/114.114.114.114
+server=/ak03211hou.com/114.114.114.114
 server=/ak03220hou.com/114.114.114.114
 server=/ak03230hou.com/114.114.114.114
 server=/ak1ak1.com/114.114.114.114
