--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10828,6 +10828,7 @@ server=/allirishtours.com/114.114.114.114
 server=/alllget.com/114.114.114.114
 server=/alllook.tv/114.114.114.114
 server=/allmaga.net/114.114.114.114
+server=/allmei.com/114.114.114.114
 server=/allnow.com/114.114.114.114
 server=/alloyteam.com/114.114.114.114
 server=/allpayx.com/114.114.114.114
