--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10923,6 +10923,7 @@ server=/ambition-soft.com/114.114.114.114
 server=/ambow.com/114.114.114.114
 server=/amcarebsh.com/114.114.114.114
 server=/amcaresz.com/114.114.114.114
+server=/amcarewl.com/114.114.114.114
 server=/amcfortune.com/114.114.114.114
 server=/amchamchina.org/114.114.114.114
 server=/amcvoyages.com/114.114.114.114
