--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10999,6 +10999,7 @@ server=/anan123.vip/114.114.114.114
 server=/anandoor.com/114.114.114.114
 server=/anandzhang.com/114.114.114.114
 server=/ananlighting.com/114.114.114.114
+server=/ananpet.com/114.114.114.114
 server=/ananzu.com/114.114.114.114
 server=/anao.vip/114.114.114.114
 server=/anatuprak.com/114.114.114.114
