accelerated-domains: add apiapple.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11501,6 +11501,7 @@ server=/api.so/114.114.114.114
 server=/apiadmin.org/114.114.114.114
 server=/apiairasia.com/114.114.114.114
 server=/apiandroid.com/114.114.114.114
+server=/apiapple.com/114.114.114.114
 server=/apicase.io/114.114.114.114
 server=/apicgate.com/114.114.114.114
 server=/apicloud.com/114.114.114.114
