--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11681,6 +11681,7 @@ server=/apwuyou.com/114.114.114.114
 server=/apxm.net/114.114.114.114
 server=/apxnlw.com/114.114.114.114
 server=/aq1taobao.com/114.114.114.114
+server=/aq2y.com/114.114.114.114
 server=/aqara.com/114.114.114.114
 server=/aqawzxeg.com/114.114.114.114
 server=/aqb.so/114.114.114.114
