--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11713,6 +11713,7 @@ server=/aqsiqauto.com/114.114.114.114
 server=/aqsitong.com/114.114.114.114
 server=/aqsyssm.com/114.114.114.114
 server=/aqtd.com/114.114.114.114
+server=/aqua-worth.com/114.114.114.114
 server=/aquabk.com/114.114.114.114
 server=/aquacity-tj.com/114.114.114.114
 server=/aquair-china.com/114.114.114.114
