accelerated-domains: add archiposition.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11760,6 +11760,7 @@ server=/archiant.com/114.114.114.114
 server=/archina.com/114.114.114.114
 server=/archiname.com/114.114.114.114
 server=/archio.pro/114.114.114.114
+server=/archiposition.com/114.114.114.114
 server=/architbang.com/114.114.114.114
 server=/archrd.net/114.114.114.114
 server=/archsummit.com/114.114.114.114
