--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12002,6 +12002,7 @@ server=/asmr.gay/114.114.114.114
 server=/asmr.red/114.114.114.114
 server=/asnlab.com/114.114.114.114
 server=/asnlab.org/114.114.114.114
+server=/asnowsz.com/114.114.114.114
 server=/aso.ink/114.114.114.114
 server=/aso100.com/114.114.114.114
 server=/aso114.com/114.114.114.114
