--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12328,6 +12328,7 @@ server=/awemeugwave.com/114.114.114.114
 server=/awfggc.com/114.114.114.114
 server=/awfzx.com/114.114.114.114
 server=/awhouse.art/114.114.114.114
+server=/awi-intl.com/114.114.114.114
 server=/awinic.com/114.114.114.114
 server=/awmote.com/114.114.114.114
 server=/aword.net/114.114.114.114
