accelerated-domains: add fukangyuanyanglao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31564,6 +31564,7 @@ server=/fujinotrade.com/114.114.114.114
 server=/fuka.cc/114.114.114.114
 server=/fukangjixie.com/114.114.114.114
 server=/fukangqipai.com/114.114.114.114
+server=/fukangyuanyanglao.com/114.114.114.114
 server=/fuke163.com/114.114.114.114
 server=/fukexie.com/114.114.114.114
 server=/fulanka.com/114.114.114.114
