--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12555,6 +12555,7 @@ server=/azureyun.com/114.114.114.114
 server=/azxdiy.com/114.114.114.114
 server=/azy288.com/114.114.114.114
 server=/azycjd.com/114.114.114.114
+server=/azyfy.com/114.114.114.114
 server=/azz.net/114.114.114.114
 server=/azzdm.com/114.114.114.114
 server=/b-chem.com/114.114.114.114
