--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13025,6 +13025,7 @@ server=/ballgametime.com/114.114.114.114
 server=/ballpure.com/114.114.114.114
 server=/balltv.cc/114.114.114.114
 server=/baltamatica.com/114.114.114.114
+server=/bama-supercon.com/114.114.114.114
 server=/bama555.com/114.114.114.114
 server=/bamaiwo.com/114.114.114.114
 server=/bamalifelong.com/114.114.114.114
