accelerated-domains: add baoji-marathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13255,6 +13255,7 @@ server=/baohuaxia.com/114.114.114.114
 server=/baohuiming.net/114.114.114.114
 server=/baoimg.net/114.114.114.114
 server=/baoinsurance.com/114.114.114.114
+server=/baoji-marathon.com/114.114.114.114
 server=/baoji3g.com/114.114.114.114
 server=/baojia.com/114.114.114.114
 server=/baojiagaiye.com/114.114.114.114
