accelerated-domains: add qxycy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68019,6 +68019,7 @@ server=/qxwz.com/114.114.114.114
 server=/qxxsjk.com/114.114.114.114
 server=/qxxzf.com/114.114.114.114
 server=/qxy777.com/114.114.114.114
+server=/qxycy.com/114.114.114.114
 server=/qxyjssb.com/114.114.114.114
 server=/qxzsw.com/114.114.114.114
 server=/qxzxp.com/114.114.114.114
