--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13644,6 +13644,7 @@ server=/bdcloudapi.com/114.114.114.114
 server=/bdclouddns.com/114.114.114.114
 server=/bdcn-media.com/114.114.114.114
 server=/bdcqc.com/114.114.114.114
+server=/bddhospital.com/114.114.114.114
 server=/bddwm.com/114.114.114.114
 server=/bdebid.com/114.114.114.114
 server=/bdeceimg.com/114.114.114.114
