accelerated-domains: add bdfyy999.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13655,6 +13655,7 @@ server=/bdfczx.com/114.114.114.114
 server=/bdfmj.com/114.114.114.114
 server=/bdfmkj.com/114.114.114.114
 server=/bdfyst.com/114.114.114.114
+server=/bdfyy999.com/114.114.114.114
 server=/bdfzcd.net/114.114.114.114
 server=/bdg-brain.com/114.114.114.114
 server=/bdgamelive.com/114.114.114.114
