--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13657,6 +13657,7 @@ server=/bdfmkj.com/114.114.114.114
 server=/bdfyst.com/114.114.114.114
 server=/bdfyy999.com/114.114.114.114
 server=/bdfzcd.net/114.114.114.114
+server=/bdfzkyy.com/114.114.114.114
 server=/bdg-brain.com/114.114.114.114
 server=/bdgamelive.com/114.114.114.114
 server=/bdgp.cc/114.114.114.114
