--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13882,6 +13882,7 @@ server=/beijingfenxiangkeji.com/114.114.114.114
 server=/beijingfojiao.com/114.114.114.114
 server=/beijinggobroadhospital.com/114.114.114.114
 server=/beijingguoyitang.com/114.114.114.114
+server=/beijinghopemedcare.com/114.114.114.114
 server=/beijinghuiyizhongxin.com/114.114.114.114
 server=/beijingkbd.com/114.114.114.114
 server=/beijingnorthstar.com/114.114.114.114
