--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14015,6 +14015,7 @@ server=/benmu-health.com/114.114.114.114
 server=/benniux.com/114.114.114.114
 server=/bennybu.fun/114.114.114.114
 server=/benpsbp.com/114.114.114.114
+server=/benqhospital.com/114.114.114.114
 server=/benqmedicalcenter.com/114.114.114.114
 server=/benqmedicalcentersz.com/114.114.114.114
 server=/benshouji.com/114.114.114.114
