accelerated-domains: add bfszw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14209,6 +14209,7 @@ server=/bfssj.com/114.114.114.114
 server=/bfsu-artery.net/114.114.114.114
 server=/bfsutw.com/114.114.114.114
 server=/bfsxmj.com/114.114.114.114
+server=/bfszw.com/114.114.114.114
 server=/bft-robot.com/114.114.114.114
 server=/bft5mp.xyz/114.114.114.114
 server=/bftq.com/114.114.114.114
