--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14293,6 +14293,7 @@ server=/bhdata.com/114.114.114.114
 server=/bhdl520.com/114.114.114.114
 server=/bhdns.com/114.114.114.114
 server=/bhduan.xyz/114.114.114.114
+server=/bhdxfsyy.com/114.114.114.114
 server=/bhdyjs.com/114.114.114.114
 server=/bheae.com/114.114.114.114
 server=/bhecard.com/114.114.114.114
