--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14700,6 +14700,7 @@ server=/bioon.net/114.114.114.114
 server=/biosrepair.com/114.114.114.114
 server=/biostatistic.net/114.114.114.114
 server=/biotecan.com/114.114.114.114
+server=/biotech-meds.com/114.114.114.114
 server=/biothink.tech/114.114.114.114
 server=/biovector.net/114.114.114.114
 server=/biovip.com/114.114.114.114
