--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14859,6 +14859,7 @@ server=/biyou.tech/114.114.114.114
 server=/biyuandi.com/114.114.114.114
 server=/biyuansh.com/114.114.114.114
 server=/biyuwu.cc/114.114.114.114
+server=/biyuzg.com/114.114.114.114
 server=/biz-abroad.com/114.114.114.114
 server=/biz-east.com/114.114.114.114
 server=/biz-email.net/114.114.114.114
