--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14984,6 +14984,7 @@ server=/bjcxdf.com/114.114.114.114
 server=/bjcycg.com/114.114.114.114
 server=/bjcyhui.com/114.114.114.114
 server=/bjcymt.com/114.114.114.114
+server=/bjcymyy.com/114.114.114.114
 server=/bjcyzg.com/114.114.114.114
 server=/bjd-mc.com/114.114.114.114
 server=/bjdcfy.com/114.114.114.114
