--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15001,6 +15001,7 @@ server=/bjdsppa.com/114.114.114.114
 server=/bjdth.com/114.114.114.114
 server=/bjdw.org/114.114.114.114
 server=/bjdxfsxx.com/114.114.114.114
+server=/bjdxzxy.com/114.114.114.114
 server=/bjeasycom.com/114.114.114.114
 server=/bjecutuning.com/114.114.114.114
 server=/bjef.com/114.114.114.114
