accelerated-domains: add bjjkw.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15086,6 +15086,7 @@ server=/bjjinl.com/114.114.114.114
 server=/bjjizhun.com/114.114.114.114
 server=/bjjk66.com/114.114.114.114
 server=/bjjkglxh.org/114.114.114.114
+server=/bjjkw.net/114.114.114.114
 server=/bjjmzh.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
