accelerated-domains: add bjjsyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15091,6 +15091,7 @@ server=/bjjmzh.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
 server=/bjjstyyzzyy.com/114.114.114.114
+server=/bjjsyy.com/114.114.114.114
 server=/bjjtat.com/114.114.114.114
 server=/bjjubao.org/114.114.114.114
 server=/bjjzsc.com/114.114.114.114
