accelerated-domains: add bjmylike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15140,6 +15140,7 @@ server=/bjmti.com/114.114.114.114
 server=/bjmts.net/114.114.114.114
 server=/bjmxkn.com/114.114.114.114
 server=/bjmxxh.com/114.114.114.114
+server=/bjmylike.com/114.114.114.114
 server=/bjmzw.com/114.114.114.114
 server=/bjnaxl.com/114.114.114.114
 server=/bjnsr.com/114.114.114.114
