accelerated-domains: add bjnxgbyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15145,6 +15145,7 @@ server=/bjmzw.com/114.114.114.114
 server=/bjnaxl.com/114.114.114.114
 server=/bjnkzx.com/114.114.114.114
 server=/bjnsr.com/114.114.114.114
+server=/bjnxgbyy.com/114.114.114.114
 server=/bjoutai.com/114.114.114.114
 server=/bjp321.com/114.114.114.114
 server=/bjpag.com/114.114.114.114
