accelerated-domains: add bjpifu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15152,6 +15152,7 @@ server=/bjpag.com/114.114.114.114
 server=/bjpcyd.com/114.114.114.114
 server=/bjpfh.com/114.114.114.114
 server=/bjpgsfjxh.com/114.114.114.114
+server=/bjpifu.com/114.114.114.114
 server=/bjpinweixuan.com/114.114.114.114
 server=/bjpowernode.com/114.114.114.114
 server=/bjqcjdcj.com/114.114.114.114
