accelerated-domains: add bjsjstxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15205,6 +15205,7 @@ server=/bjsj5.com/114.114.114.114
 server=/bjsjac.com/114.114.114.114
 server=/bjsjgyy.com/114.114.114.114
 server=/bjsjsch12333.com/114.114.114.114
+server=/bjsjstxyy.com/114.114.114.114
 server=/bjsjsyly.com/114.114.114.114
 server=/bjsjwl.com/114.114.114.114
 server=/bjsjxtm.com/114.114.114.114
