accelerated-domains: add bju-flo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15255,6 +15255,7 @@ server=/bjtvnews.com/114.114.114.114
 server=/bjtyhj.com/114.114.114.114
 server=/bjtyzh.org/114.114.114.114
 server=/bjtzzg.com/114.114.114.114
+server=/bju-flo.com/114.114.114.114
 server=/bjufida.com/114.114.114.114
 server=/bjun.tech/114.114.114.114
 server=/bjunionstar.net/114.114.114.114
