accelerated-domains: add bohaigs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15715,6 +15715,7 @@ server=/bogokj.com/114.114.114.114
 server=/boguanpaimai.com/114.114.114.114
 server=/boguub.com/114.114.114.114
 server=/bohaiadx.com/114.114.114.114
+server=/bohaigs.com/114.114.114.114
 server=/bohailife.net/114.114.114.114
 server=/bohaishibei.com/114.114.114.114
 server=/bohaism.com/114.114.114.114
