accelerated-domains: add boooming.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15855,6 +15855,7 @@ server=/boolv.com/114.114.114.114
 server=/boonew.com/114.114.114.114
 server=/boonoo.net/114.114.114.114
 server=/boooba.com/114.114.114.114
+server=/boooming.com/114.114.114.114
 server=/boooog.net/114.114.114.114
 server=/booop.net/114.114.114.114
 server=/boopwater.com/114.114.114.114
