accelerated-domains: add born123.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15879,6 +15879,7 @@ server=/borain.com/114.114.114.114
 server=/borderlessbd.com/114.114.114.114
 server=/borenhospital.com/114.114.114.114
 server=/borlonclan.com/114.114.114.114
+server=/born123.com/114.114.114.114
 server=/borninsummer.com/114.114.114.114
 server=/borpor.com/114.114.114.114
 server=/borscon.com/114.114.114.114
