accelerated-domains: add canglanghospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17181,6 +17181,7 @@ server=/cangdu.org/114.114.114.114
 server=/cangfengzhe.com/114.114.114.114
 server=/canghaimachine.com/114.114.114.114
 server=/cangjiaohui.com/114.114.114.114
+server=/canglanghospital.com/114.114.114.114
 server=/cangmang.xyz/114.114.114.114
 server=/cangoonline.com/114.114.114.114
 server=/cangowin.com/114.114.114.114
