accelerated-domains: add cddq120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17868,6 +17868,7 @@ server=/cddgg.com/114.114.114.114
 server=/cddgg.net/114.114.114.114
 server=/cddjip.com/114.114.114.114
 server=/cddlkj.net/114.114.114.114
+server=/cddq120.com/114.114.114.114
 server=/cddscj.com/114.114.114.114
 server=/cddsgk.com/114.114.114.114
 server=/cde-os.com/114.114.114.114
