accelerated-domains: add cdmaria.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17943,6 +17943,7 @@ server=/cdlinux.net/114.114.114.114
 server=/cdlsym.com/114.114.114.114
 server=/cdlvbao.com/114.114.114.114
 server=/cdlxqn.com/114.114.114.114
+server=/cdmaria.com/114.114.114.114
 server=/cdmcaac.com/114.114.114.114
 server=/cdmddyf.com/114.114.114.114
 server=/cdmfund.org/114.114.114.114
