accelerated-domains: add cdmjwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17948,6 +17948,7 @@ server=/cdmcaac.com/114.114.114.114
 server=/cdmddyf.com/114.114.114.114
 server=/cdmfund.org/114.114.114.114
 server=/cdmhwh.com/114.114.114.114
+server=/cdmjwater.com/114.114.114.114
 server=/cdmmlxs.com/114.114.114.114
 server=/cdn-cba.com/114.114.114.114
 server=/cdn-cdn.net/114.114.114.114
