accelerated-domains: add cellprobio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18286,6 +18286,7 @@ server=/celinlawyers.com/114.114.114.114
 server=/celiss.com/114.114.114.114
 server=/cellixsoft.com/114.114.114.114
 server=/cellocation.com/114.114.114.114
+server=/cellprobio.com/114.114.114.114
 server=/cells-net.com/114.114.114.114
 server=/cells-net.net/114.114.114.114
 server=/celwk.com/114.114.114.114
