accelerated-domains: add centec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18309,6 +18309,7 @@ server=/centainfo.com/114.114.114.114
 server=/centaland.com/114.114.114.114
 server=/centanet.com/114.114.114.114
 server=/centauriglobal.com/114.114.114.114
+server=/centec.com/114.114.114.114
 server=/cententcymbals.com/114.114.114.114
 server=/centercmslinks.com/114.114.114.114
 server=/centerm.com/114.114.114.114
