accelerated-domains: add chemyouth.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18955,6 +18955,7 @@ server=/chemsrc.com/114.114.114.114
 server=/chemtour.com/114.114.114.114
 server=/chemwells.com/114.114.114.114
 server=/chemwith.com/114.114.114.114
+server=/chemyouth.com/114.114.114.114
 server=/chemyq.com/114.114.114.114
 server=/chen-design.com/114.114.114.114
 server=/chen.fun/114.114.114.114
