accelerated-domains: add chinaerospace.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19552,6 +19552,7 @@ server=/chinaembassy.at/114.114.114.114
 server=/chinaepu.com/114.114.114.114
 server=/chinaequity.net/114.114.114.114
 server=/chinaerdos.com/114.114.114.114
+server=/chinaerospace.com/114.114.114.114
 server=/chinaesf.net/114.114.114.114
 server=/chinaesm.com/114.114.114.114
 server=/chinaet.net/114.114.114.114
