accelerated-domains: add chinakangping.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19690,6 +19690,7 @@ server=/chinajyhj.com/114.114.114.114
 server=/chinajyxdh.com/114.114.114.114
 server=/chinajzqc.com/114.114.114.114
 server=/chinakab.com/114.114.114.114
+server=/chinakangping.com/114.114.114.114
 server=/chinakaoyan.com/114.114.114.114
 server=/chinakasa.com/114.114.114.114
 server=/chinakewei.com/114.114.114.114
