accelerated-domains: add chinasti.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19882,6 +19882,7 @@ server=/chinassl.com/114.114.114.114
 server=/chinassl.net/114.114.114.114
 server=/chinasspp.com/114.114.114.114
 server=/chinastationeryfair.com/114.114.114.114
+server=/chinasti.com/114.114.114.114
 server=/chinastoneforest.com/114.114.114.114
 server=/chinasufa.com/114.114.114.114
 server=/chinasuntree.com/114.114.114.114
