accelerated-domains: add chinaxuchuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20004,6 +20004,7 @@ server=/chinaxpp.com/114.114.114.114
 server=/chinaxq.com/114.114.114.114
 server=/chinaxqf.com/114.114.114.114
 server=/chinaxsjc.com/114.114.114.114
+server=/chinaxuchuan.com/114.114.114.114
 server=/chinaxueqian.com/114.114.114.114
 server=/chinaxwcb.com/114.114.114.114
 server=/chinaxy.com/114.114.114.114
