accelerated-domains: add chyyyygl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20484,6 +20484,7 @@ server=/chyitech.com/114.114.114.114
 server=/chysoft.net/114.114.114.114
 server=/chyw.pub/114.114.114.114
 server=/chyxx.com/114.114.114.114
+server=/chyyyygl.com/114.114.114.114
 server=/chzhkeji.com/114.114.114.114
 server=/chzhw.com/114.114.114.114
 server=/chzwater.com/114.114.114.114
