accelerated-domains: add ciming-sh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20587,6 +20587,7 @@ server=/cimen.club/114.114.114.114
 server=/cimicmj.com/114.114.114.114
 server=/cimictiles.com/114.114.114.114
 server=/ciming-bj.com/114.114.114.114
+server=/ciming-sh.com/114.114.114.114
 server=/ciming.com/114.114.114.114
 server=/cimingaoya.com/114.114.114.114
 server=/cimingsy.com/114.114.114.114
